# PacStation

./: .gitignore  README.md
.github/workflows/: ci.yml
src/: .clangd  CMakeLists.txt  debug.h  iconutils.cpp  iconutils.h  main.cpp  mainwindow.cpp  mainwindow.h  resources.qrc  sidebarbutton.cpp  sidebarbutton.h  startupchecker.cpp  startupchecker.h  style.qss  thememanager.cpp  thememanager.h  version.json
src/pages/: downloadspage.cpp  downloadspage.h  homepage.cpp  homepage.h  installedpage.cpp  installedpage.h  settingspage.cpp  settingspage.h  updatespage.cpp  updatespage.h
src/pages/settings/: appearancesettingspage.cpp  appearancesettingspage.h  mirrorssettingspage.cpp  mirrorssettingspage.h  repossettingspage.cpp  repossettingspage.h  searchsettingspage.cpp  searchsettingspage.h  securitysettingspage.cpp  securitysettingspage.h  sourcessettingspage.cpp  sourcessettingspage.h  updatessettingspage.cpp  updatessettingspage.h
src/translations/: pacstation_en.ts
src/widgets/: elidalabel.h  infobanner.h  numberspinner.h  pickerbase.h  settingrow.cpp  settingrow.h  sourceprioritylist.cpp  sourceprioritylist.h  toastnotification.h  toggleswitch.cpp  toggleswitch.h  togglewithstatus.h
